infra/k8s/dev/agent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agent
spec:
  ingressClassName: nginx
  rules:
    - host: api-dev.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent-svc
                port:
                  name: http
